CrossRegion/beijing/gz-cross-bj/gz-cross-bj-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.cloud.tencent.com/cross-region-id: ap-guangzhou
    ingress.cloud.tencent.com/cross-type: PVGW
    ingress.cloud.tencent.com/cross-vpc-id: vpc-41ynd0e9
    ingress.cloud.tencent.com/snat-pro-info: '{"snatIps":[{"subnetId":"subnet-jtrhbdbo"}]}'
    ingress.kubernetes.io/tke-existed-lbid: lb-4yl4ll48
  name: gz-cross-bj-ingress-55680
  namespace: prod
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: gz-cross-bj-service
          servicePort: 55680
        path: /
